[FIX] Linguage de escrita nas páginas de descrição dos componentes

--- a/src/FTTBlazor/Pages/About/Button.razor
+++ b/src/FTTBlazor/Pages/About/Button.razor
@@ -15,7 +15,7 @@
         <h6>Below is an example of how to implement the BUTTON component.</h6>
     </div>
 
-    <FTTButton Size="4" Label="Botão"></FTTButton>
+    <FTTButton Size="4" Label="Button"></FTTButton>
 
     <div class="mdl-cell--12-col">
         <h4>Example</h4>
