--- a/src/FTTBlazor/Pages/About/Input.razor
+++ b/src/FTTBlazor/Pages/About/Input.razor
@@ -35,52 +35,52 @@
     <FTTInput Type="InputType.Color" BorderRight="true" Size="4" Label="Color" @bind-Value="Color"></FTTInput>
     <FTTInput Type="InputType.Time" BorderRight="true" Size="4" Label="Time" @bind-Value="Time"></FTTInput>
 
-    <FTTInput Type="InputType.Phone" BorderRight="true" Size="4" Label="Telefone" @bind-Value="Phone"></FTTInput>
-    <FTTInput Type="InputType.Money" BorderRight="true" Size="4" Label="Dinheiro" @bind-Value="Money"></FTTInput>
+    <FTTInput Type="InputType.Phone" BorderRight="true" Size="4" Label="Telephone" @bind-Value="Phone"></FTTInput>
+    <FTTInput Type="InputType.Money" BorderRight="true" Size="4" Label="Money" @bind-Value="Money"></FTTInput>
 
     <FTTInput Type="InputType.Email" BorderRight="true" Size="4" Label="Email" @bind-Value="Email"></FTTInput>
     <FTTInput Type="InputType.CNPJ" BorderRight="true" Size="4" Label="CPNJ" @bind-Value="CNPJ"></FTTInput>
     <FTTInput Type="InputType.CPF" BorderRight="true" Size="4" Label="CPF" @bind-Value="CPF"></FTTInput>
 
-    <FTTInput Type="InputType.Percentage" BorderRight="true" Size="4" Label="Porcentagem" @bind-Value="Percentage"></FTTInput>
+    <FTTInput Type="InputType.Percentage" BorderRight="true" Size="4" Label="Percentage" @bind-Value="Percentage"></FTTInput>
     <FTTInput Type="InputType.CEP" BorderRight="true" Size="4" Label="CEP" @bind-Value="CEP"></FTTInput>
 
-    <FTTInput Type="InputType.TextArea" BorderRight="true" Size="12" Label="Area de Texto" @bind-Value="TextArea"></FTTInput>
+    <FTTInput Type="InputType.TextArea" BorderRight="true" Size="12" Label="Text area" @bind-Value="TextArea"></FTTInput>
 
     <div class="mdl-cell--12-col">
-        <h4>Usando</h4>
-        <h6>Adicionando na pagina</h6>
+        <h4>Example</h4>
+        <h6>How to use the component in view page</h6>
         <img src="../img/about/input1.png" />
     </div>
 
     <div class="mdl-cell--12-col">
         <h4>Types</h4>
-        <h6>Abaixo a imagem dos tipos de INPUT disponiveis</h6>
+        <h6>Below is an imagem of the types of INPUT available </h6>
         <img src="../img/about/input2.png" />
     </div>
 
     <div class="mdl-cell--12-col">
-        <h4>Codigo usado</h4>
-        <h6>Abaixo uma imagem de como implementar o componente no seu sistema</h6>
+        <h4>In the code</h4>
+        <h6>Below is an image of how to implement the component in your system</h6>
         <img src="../img/about/input.png" />
     </div>
 
     <div class="mdl-cell--12-col">
-        <h4>Parametros do <span style="font-weight:bold;">FTTInput</span></h4>
-        <h6><span style="font-weight:bold;">IsReadOnly:</span> Desabilita o componente</h6>
-        <h6><span style="font-weight:bold;">Label:</span> Texto do label</h6>
-        <h6><span style="font-weight:bold;">bind-Value:</span> Definimos a variavel que vai receber o dado</h6>
-        <h6><span style="font-weight:bold;">ValueChanged:</span> Aqui podemos adicionar a chamada de um metodo ao trocar o item</h6>
-        <h6><span style="font-weight:bold;">OnFocusOut:</span> Aqui podemos adicionar a chamada de um metodo FocusOut</h6>
-        <h6><span style="font-weight:bold;">OnInput:</span> Aqui podemos adicionar a chamada de um metodo OnInput</h6>
-        <h6><span style="font-weight:bold;">Size:</span> Tamanho do componente na tela</h6>
-        <h6><span style="font-weight:bold;">Pattern:</span> Validações para o componente</h6>
-        <h6><span style="font-weight:bold;">Required:</span> Obriga o preenchimento dentro de formulários com SUBMIT</h6>
-        <h6><span style="font-weight:bold;">BorderRight:</span> Adiciona uma borda a direita</h6>
-        <h6><span style="font-weight:bold;">Type:</span> Definimos o tipo de input</h6>
-        <h6><span style="font-weight:bold;">Icon:</span> Podemos adicionar um <a href="https://fonts.google.com/icons?selected=Material+Icons">ICON</a> ao final do input</h6>
-        <h6><span style="font-weight:bold;">IconClick:</span> Capturamos o OnClick do ICON</h6>
-        <h6><span style="font-weight:bold;">CssClass:</span> Adicionamos um CSS ao componente</h6>
+        <h4><span style="font-weight:bold;">FTTInput</span> attributes</h4>
+        <h6><span style="font-weight:bold;">IsReadOnly:</span> Boolean value that makes the element not mutable (the user can not edit it)</h6>
+        <h6><span style="font-weight:bold;">Label:</span> Label text</h6>
+        <h6><span style="font-weight:bold;">bind-Value:</span> Binds a value to a variable</h6>
+        <h6><span style="font-weight:bold;">ValueChanged:</span> Method callback when value has changed</h6>
+        <h6><span style="font-weight:bold;">OnFocusOut:</span> Callback method can be added to the FocusOut attribute</h6>
+        <h6><span style="font-weight:bold;">OnInput:</span> Callback method can be added to the OnInput attribute</h6>
+        <h6><span style="font-weight:bold;">Size:</span> Sets the element size</h6>
+        <h6><span style="font-weight:bold;">Pattern:</span> Validation pattern for input content</h6>
+        <h6><span style="font-weight:bold;">Required:</span> Determines whether filling in the field is mandatory or not</h6>
+        <h6><span style="font-weight:bold;">BorderRight:</span> Adds a border on the right</h6>
+        <h6><span style="font-weight:bold;">Type:</span> Determines the input type</h6>
+        <h6><span style="font-weight:bold;">Icon:</span> An <a href="https://fonts.google.com/icons?selected=Material+Icons">ICON</a> can be added at the end of the input</h6>
+        <h6><span style="font-weight:bold;">IconClick:</span> Callback method can be added to the icon IconClick attribute</h6>
+        <h6><span style="font-weight:bold;">CssClass:</span> Add a set of styles to the component</h6>
     </div>
 
 </div>
@@ -92,39 +92,39 @@
     </div>
 
     <div class="mdl-cell--12-col">
-        <h4>Exemplo</h4>
-        <h6>Abaixo uma serie de opções para INPUT e exemplos de como usar.</h6>
+        <h4>Example</h4>
+        <h6>Below is an example of how to implement the INPUT input.</h6>
     </div>
 
     <FTTNumber BorderRight="true" Size="4" Label="Input" @bind-Value="Number"></FTTNumber>
 
     <div class="mdl-cell--12-col">
-        <h4>Usando</h4>
-        <h6>Adicionando na pagina</h6>
+        <h4>Example</h4>
+        <h6>How to use the component in view page</h6>
         <img src="../img/about/input1.png" />
     </div>
 
     <div class="mdl-cell--12-col">
-        <h4>Codigo usado</h4>
-        <h6>Abaixo uma imagem de como implementar o componente no seu sistema</h6>
+        <h4>In the code</h4>
+        <h6>Below is an image of how to implement the component in your system</h6>
         <img src="../img/about/inputNumber.png" />
     </div>
 
     <div class="mdl-cell--12-col">
-        <h4>Parametros do <span style="font-weight:bold;">FTTNumber</span></h4>
-        <h6><span style="font-weight:bold;">IsReadOnly:</span> Desabilita o componente</h6>
-        <h6><span style="font-weight:bold;">Label:</span> Texto do label</h6>
-        <h6><span style="font-weight:bold;">bind-Value:</span> Definimos a variavel que vai receber o dado</h6>
-        <h6><span style="font-weight:bold;">ValueChanged:</span> Aqui podemos adicionar a chamada de um metodo ao trocar o item</h6>
-        <h6><span style="font-weight:bold;">OnFocusOut:</span> Aqui podemos adicionar a chamada de um metodo FocusOut</h6>
-        <h6><span style="font-weight:bold;">OnInput:</span> Aqui podemos adicionar a chamada de um metodo OnInput</h6>
-        <h6><span style="font-weight:bold;">Size:</span> Tamanho do componente na tela</h6>
-        <h6><span style="font-weight:bold;">Pattern:</span> Validações para o componente</h6>
-        <h6><span style="font-weight:bold;">Required:</span> Obriga o preenchimento dentro de formulários com SUBMIT</h6>
-        <h6><span style="font-weight:bold;">BorderRight:</span> Adiciona uma borda a direita</h6>
-        <h6><span style="font-weight:bold;">Icon:</span> Podemos adicionar um <a href="https://fonts.google.com/icons?selected=Material+Icons">ICON</a> ao final do input</h6>
-        <h6><span style="font-weight:bold;">IconClick:</span> Capturamos o OnClick do ICON</h6>
-        <h6><span style="font-weight:bold;">CssClass:</span> Adicionamos um CSS ao componente</h6>
+        <h4><span style="font-weight:bold;">FTTNumber</span> attributes</h4>
+        <h6><span style="font-weight:bold;">IsReadOnly:</span> Boolean value that makes the element not mutable (the user can not edit it)</h6>
+        <h6><span style="font-weight:bold;">Label:</span> Label text</h6>
+        <h6><span style="font-weight:bold;">bind-Value:</span> Binds a value to a variable</h6>
+        <h6><span style="font-weight:bold;">ValueChanged:</span> Method callback when value has changed</h6>
+        <h6><span style="font-weight:bold;">OnFocusOut:</span> Callback method can be added to the FocusOut attribute</h6>
+        <h6><span style="font-weight:bold;">OnInput:</span> Callback method can be added to the OnInput attribute</h6>
+        <h6><span style="font-weight:bold;">Size:</span> Sets the element size</h6>
+        <h6><span style="font-weight:bold;">Pattern:</span> Validation pattern for input content</h6>
+        <h6><span style="font-weight:bold;">Required:</span> Determines whether filling in the field is mandatory or not</h6>
+        <h6><span style="font-weight:bold;">BorderRight:</span> Adds a border on the right</h6>
+        <h6><span style="font-weight:bold;">Icon:</span> An <a href="https://fonts.google.com/icons?selected=Material+Icons">ICON</a> can be added at the end of the input</h6>
+        <h6><span style="font-weight:bold;">IconClick:</span> Callback method can be added to the icon IconClick attribute</h6>
+        <h6><span style="font-weight:bold;">CssClass:</span> Add a set of styles to the component</h6>
     </div>
 
 </div>
