--- a/src/FTTBlazor/Pages/About/Link.razor
+++ b/src/FTTBlazor/Pages/About/Link.razor
@@ -18,12 +18,11 @@
 
     <div class="mdl-cell--12-col">
         <h4>Example</h4>
-        <h6>Abaixo uma serie de opções para LINK e exemplos de como usar.</h6>
         <h6>Below is an example of how to implement the LINK component.</h6>
     </div>
 
     <FTTLink BorderRight="true" Size="4" T="FTTBlazor.Common.PokeAPI.PokemonDTO" Icon="visibility"
-             Title="Link para pokemon" LabelLink="@pokemon.Name">
+             Title="Pokemon link" LabelLink="@pokemon.Name">
         <Body>
             <FTTBlazor.Models.LinkPage Item="pokemon"></FTTBlazor.Models.LinkPage>
         </Body>
