--- a/src/FTTBlazor/Pages/About/Select.razor
+++ b/src/FTTBlazor/Pages/About/Select.razor
@@ -88,7 +88,7 @@
                     Data="@ListPokemons"
                     Size="4"
                     Required="true"
-                    Label="Exemplo de string array">
+                    Label="Sstring array example">
     </FTTSelectArray>
 
     <div class="mdl-cell--12-col">
@@ -136,12 +136,12 @@
                DataSourceDescField="Name"
                @bind-DataId="@Id"
                @bind-DataDesc="@Name"
-               Label="Exemplo de string endpoint"
+               Label="String endpoint example"
                Filter="(x => !string.IsNullOrWhiteSpace(x.Name))">
     </FTTSelect>
 
     <div class="mdl-cell--12-col">
-        <h4>Usando</h4>
+        <h4>Example</h4>
         <h6>How to use the component in view page</h6>
         <img src="../img/about/selectEnum1.png" />
     </div>
