--- a/src/FTTBlazor/Pages/About/Link.razor
+++ b/src/FTTBlazor/Pages/About/Link.razor
@@ -50,6 +50,7 @@
         <h6><span style="font-weight:bold;">LabelLink:</span> Set the link name</h6>
         <h6><span style="font-weight:bold;">Size:</span> Component size in view page</h6>
         <h6><span style="font-weight:bold;">Icon:</span> LINK icon</h6>
+        <h6><span style="font-weight:bold;">BorderRight:</span> Binds a value to a variable</h6>
     </div>
 
 </div>
