--- a/src/FTTBlazor/Pages/About/Select.razor
+++ b/src/FTTBlazor/Pages/About/Select.razor
@@ -156,7 +156,7 @@
         <h4><span style="font-weight:bold;">FTTSelectEnums</span>attributes</h4>
         <h6><span style="font-weight:bold;">OnItemSelected:</span> Allows calling a method when switching items</h6>
         <h6><span style="font-weight:bold;">BorderRight:</span> Adds a border on the right</h6>
-        <h6><span style="font-weight:bold;">T:</span> Enum that will assemble the DDL (Data Definition Language)</h6>
+        <h6><span style="font-weight:bold;">T:</span> Entity that will assemble the DDL (Data Definition Language)</h6>
         <h6><span style="font-weight:bold;">Size:</span> Sets the element size</h6>
         <h6><span style="font-weight:bold;">DataSourceEndpoint:</span> Endpoint to make a GET request</h6>
         <h6><span style="font-weight:bold;">Required:</span> Boolean attribute that specifies that the field must be filled out before submitting the form</h6>
