Corrigindo a foto no about

--- a/src/FTTBlazor/Pages/Index.razor
+++ b/src/FTTBlazor/Pages/Index.razor
@@ -45,7 +45,7 @@
         <p class="text-center">Responsible for project management and scientific article, 082170029</p>
     </div>
     <div class="mdl-cell--6-col">
-        <img src="../img/luiz.png" class="img-center" />
+        <img src="../img/luiz.jpg" class="img-center" style="width: 11rem;"/>
         <p class="text-center">Responsible for Blazor WebAsembly development, 082170039</p>
     </div>
 </div>
