--- a/src/FTTBlazor.Client/Pages/About/Dialog.razor
+++ b/src/FTTBlazor.Client/Pages/About/Dialog.razor
@@ -35,13 +35,11 @@
     </div>
 </div>
 
-
-<FTTDialog @bind-IsOpen="@dialogIsOpen">
+<FTTDialog IsOpened="@dialogIsOpen">
     <FTTDialogTitle>
         DialogTitle region
     </FTTDialogTitle>
     <FTTDialogContent>
-        <hr />
         DialogContent region
         <hr />
     </FTTDialogContent>
