--- a/src/FTTBlazor.Client/Pages/About/Link.razor
+++ b/src/FTTBlazor.Client/Pages/About/Link.razor
@@ -22,7 +22,7 @@
     <FTTLink BorderRight="true" Size="4" T="FTTBlazor.Common.PokeAPI.PokemonDTO" Icon="visibility"
              Title="Pokemon link" LabelLink="@pokemon.Name">
         <Body>
-            <FTTBlazor.Models.LinkPage Item="pokemon"></FTTBlazor.Models.LinkPage>
+            <FTTBlazor.Client.Models.LinkPage Item="pokemon"></FTTBlazor.Client.Models.LinkPage>
         </Body>
         <Footer>
         </Footer>
