--- a/src/FTTBlazor/Components/Forms/Link/FTTLink.razor
+++ b/src/FTTBlazor/Components/Forms/Link/FTTLink.razor
@@ -24,7 +24,7 @@
     }
 </div>
 
-<FTTDialog @bind-IsOpen="@DialogIsOpen">
+<FTTDialog IsOpened="@DialogIsOpen">
     <FTTDialogTitle>
         <div style="width:100%; border-bottom: 1px solid var(--brandline);">
             @Title
