Subindo melhoria para remover o "export"

--- a/src/FTTBlazor/Components/Crud/FTTCrud.razor
+++ b/src/FTTBlazor/Components/Crud/FTTCrud.razor
@@ -45,9 +45,9 @@
                             }
 
                             <td width="80" style="text-align:center;">
-                                <button type="button" class="ftt-blazor-button" style="border:1px solid var(--brandline);" @onclick="@(e => { DownloadFile(); })">
+                           @*     <button type="button" class="ftt-blazor-button" style="border:1px solid var(--brandline);" @onclick="@(e => { DownloadFile(); })">
                                     <i class="material-icons" style="cursor: pointer;">save_alt</i>
-                                </button>
+                                </button>*@
                             </td>
                         }
                         else
