Subindo melhoria no menu lateral

--- a/src/FTTBlazor.Client/Shared/NavMenu.razor
+++ b/src/FTTBlazor.Client/Shared/NavMenu.razor
@@ -65,8 +65,8 @@
         Crud
     </a>
 
-    <div style=" bottom: 0px; position: fixed;">
-        <a class="mdl-navigation__link" style="width: 88%;" href="https://github.com/luizgustavo77/FTTBlazor">
+    <div style="margin-top: 3rem;">
+        <a class="mdl-navigation__link" href="https://github.com/luizgustavo77/FTTBlazor">
             <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">
                 code
             </i>
